--- a/d-python-master/Exercises.ipynb
+++ b/d-python-master/Exercises.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "![rmotr](https://user-images.githubusercontent.com/7065401/52071918-bda15380-2562-11e9-828c-7f95297e4a82.png)\n",
     "<hr style=\"margin-bottom: 40px;\">\n",
     "\n",
-    "# Python in under 10 minutes - Exercises\n"
+    "# Python - Exercises\n"
    ]
   },
   {
@@ -25,38 +26,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "revenue_as_string = \"500000\"\n",
-    "\n",
-    "# your code goes here\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "cell_type": "solution"
-   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "500000"
+       "int"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "revenue_as_integer = int(revenue_as_string)\n",
+    "revenue_as_string = \"500000\"\n",
     "\n",
-    "revenue_as_integer"
+    "# your code goes here\n",
+    "\n",
+    "revenue_as_string = int(revenue_as_string)\n",
+    "type(revenue_as_string)"
    ]
   },
   {
@@ -74,37 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_type": "hint"
-   },
-   "source": [
-    "The function will have two parameters $x$ and $y$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "cell_type": "solution"
-   },
-   "outputs": [],
-   "source": [
+    "# your code goes here\n",
     "def func(x, y):\n",
     "    return 2*x + y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +84,7 @@
        "25"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +104,7 @@
        "4"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,29 +126,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# your code goes here\n",
-    "\n"
+    "\n",
+    "def lst_ltr(str):\n",
+    "    return str[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "cell_type": "solution"
-   },
-   "outputs": [],
-   "source": [
-    "def last_letter(string):\n",
-    "    return string[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -186,18 +147,18 @@
        "'n'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "last_letter('Python')"
+    "lst_ltr('Python')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,13 +167,13 @@
        "'R'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "last_letter('RMOTR')"
+    "lst_ltr('RMOTR')"
    ]
   },
   {
@@ -228,33 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "cell_type": "solution"
-   },
-   "outputs": [],
-   "source": [
-    "def list_size(my_list):\n",
-    "    size = len(my_list)\n",
-    "    \n",
-    "    if (size > 0):\n",
-    "        return 'List has {} elements'.format(size)\n",
+    "# your code goes here\n",
+    "def list_size(list):\n",
+    "    s = len(list)\n",
+    "    if (s > 0):\n",
+    "        return 'List has {} elements'.format(s)\n",
     "    else:\n",
-    "        return 'Error, no elements'"
+    "        return 'Error, 0 elements'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +213,7 @@
        "'List has 3 elements'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Error, no elements'"
+       "'Error, 0 elements'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +266,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "26086fa8c8f5b013e5692ed9b6598a9e0a60b12b75493b5a93d7d993974cc79d"
+   }
   }
  },
  "nbformat": 4,
